--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </header>
     <section class="hero">
         <div class="hero-overlay">
+            <div class="profile-pic">
+                <img src="images/profile.jpg" alt="Profile Picture of Mahilet Tesfaye">
+            </div>
             <h1>Mahilet Tesfaye</h1>
             <p>Aspiring Software Engineer & Java Developer</p>
             <p class="elevator-pitch">"Why I love what I do: Creating efficient and impactful solutions to real-world problems drives me every day!"</p>
