--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/about.html">About Me</a></li>
-                <li><a href="pages/portfolio.html">Projects</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+            <ul class="menu">
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/about.html">About Me</a></li>
+                <li><a href="/pages/portfolio.html">Projects</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,10 +23,16 @@
             <div class="profile-pic">
                 <img src="images/profile.jpg" alt="Profile Picture of Mahilet Tesfaye">
             </div>
-            <h1>Mahilet Tesfaye</h1>
-            <p>Aspiring Software Engineer & Java Developer</p>
-            <p class="elevator-pitch">"Why I love what I do: Creating efficient and impactful solutions to real-world problems drives me every day!"</p>
+            <div class="hero-text">
+                <h1>Mahilet Tesfaye</h1>
+                <p class="tagline">Aspiring Software Engineer & Java Developer</p>
+                <p class="elevator-pitch">"Why I love what I do: Creating efficient and impactful solutions to real-world problems drives me every day!"</p>
+                <a class="button" href="contact.html">Contact Me</a>
+            </div>
         </div>
     </section>
+    <footer>
+        <p>&copy; 2024 Mahilet Tesfaye. All rights reserved.</p>
+    </footer>
 </body>
 </html>
