--- a/pages/about.html
+++ b/pages/about.html
@@ -25,8 +25,21 @@
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>I grew up in a small town where my passion for technology blossomed early on...</p>
-                <p>Professionally, I am focused on building my skills as a software engineer, particularly in Java development...</p>
+                <p>I grew up in Ethiopia, where my passion for maths and science blossomed early on my chiildhood. AS I grew up the love for maths problem solving, changed to all sorts of problem solving and
+                    most of all Computer Science algorithms as it required lots of critical thinking as maths required.
+                </p>
+                <p>Professionally, I am focused on building my skills as a software engineer. As I was a Software Engineering student back home in ADdis Ababa Institute of Technology for 
+                    aboout 3 years which is untill I moved to US, I got to byild strong foundation in computer science, also an opportunity to work on different programming languages, including python, java,
+                    Go, postgreSQL, postnet, java, HTML, CSS, C , C# and so on. </p>
+                    <p>After that, I graduated my Associate of Science  in Computer Science from Saint Paul College here in Minnesota, having a chance to work with great professors who 
+                        work in the industry, and addiitional programming languages like Ocaml. While going to college, I had a previlidge to work in Nagios Enterprises LLC, SAint Paul MN, 
+                    to  work as a Software Engineer Intern, which helped me notonly work on enterprise level languages, but also an opportuinity to enter in to real world technology problem solving</p>
+                    <p>Then, my passion for technology continued and I now is about to graduate my BAchelor of Science from Metro STate University, Saint Paul majoring in Computer Sceince.
+                        While I was a junior in my current University, I also got an opportunity to work as a wafer fab operator in Polar Semiconductor LLC,  which allowed me see the process that our smart systems
+                        incorporated- chips!
+                    </p>
+                    <p>Now getting ready for my next big leap! Looking for a career that is rewarding and challenging enough to help me grow stronger as a person, and as a software Engineer!
+                    </p>
                 <a class="button" href="contact.html">Reach Out to Me</a>
             </div>
         </div>
