--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,27 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Mahilet Tesfaye</title>
-    <link rel="stylesheet" href="/styles/style.css">
-    <script src="/scripts/script.js" defer></script>
-   
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/pages/about.html">About Me</a></li>
-                <li><a href="/pages/portfolio.html">Projects</a></li>
-                <li><a href="/pages/contact.html">Contact</a></li>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section class="contact">
-        <h2>Contact Me</h2>
-        <p>Email me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-        <div class="social-media">
-            <!-- Add icons for social media with links -->
+    <section class="contact-section">
+        <h2>Get in Touch</h2>
+        <p>If you'd like to connect with me, feel free to reach out through any of the platforms below:</p>
+        <div class="contact-icons">
+            <a href="mailto:tesfamahi3@gmail.com" class="contact-icon" target="_blank">
+                <img src="images/gmail.png" alt="Gmail">
+            </a>
+            <a href="https://www.linkedin.com/in/mahilet-tesfaye/" class="contact-icon" target="_blank">
+                <img src="images/link.png" alt="LinkedIn">
+            </a>
+            <a href="https://app.joinhandshake.com/profiles/52764029" class="contact-icon" target="_blank">
+                <img src="images/hand.png" alt="Handshake">
+            </a>
         </div>
     </section>
+    <footer>
+        <p>&copy; 2024 Mahilet Tesfaye. All rights reserved.</p>
+    </footer>
 </body>
 </html>
