--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahilet Tesfaye - Home</title>
-    <link rel="stylesheet" href="/styles/style.css">
-    <script src="/scripts/script.js" defer></script>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <section class="hero">
-        <div class="hero-overlay">
+        <div class="hero-content">
             <div class="profile-pic">
                 <img src="images/profile.jpg" alt="Profile Picture of Mahilet Tesfaye">
             </div>
