--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahilet Tesfaye - Home</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="scripts/script.js" defer></script>
+    <link rel="stylesheet" href="/styles/style.css">
+    <script src="/scripts/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -19,15 +19,15 @@
         </nav>
     </header>
     <section class="hero">
-        <div class="hero-content">
+        <div class="hero-overlay">
             <div class="profile-pic">
-                <img src="images/profile.jpg" alt="Profile Picture of Mahilet Tesfaye">
+                <img src="/images/profile.jpg" alt="Profile Picture of Mahilet Tesfaye">
             </div>
             <div class="hero-text">
                 <h1>Mahilet Tesfaye</h1>
                 <p class="tagline">Aspiring Software Engineer & Java Developer</p>
                 <p class="elevator-pitch">"Why I love what I do: Creating efficient and impactful solutions to real-world problems drives me every day!"</p>
-                <a class="button" href="contact.html">Contact Me</a>
+                <a class="button" href="/pages/contact.html">Contact Me</a>
             </div>
         </div>
     </section>
