--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,13 +23,13 @@
         <p>If you'd like to connect with me, feel free to reach out through any of the platforms below:</p>
         <div class="contact-icons">
             <a href="mailto:tesfamahi3@gmail.com" class="contact-icon" target="_blank">
-                <img src="images/gmail.png" alt="Gmail">
+                <img src="/images/gmail.png" alt="Gmail">
             </a>
             <a href="https://www.linkedin.com/in/mahilet-tesfaye/" class="contact-icon" target="_blank">
-                <img src="images/link.png" alt="LinkedIn">
+                <img src="/images/link.png" alt="LinkedIn">
             </a>
             <a href="https://app.joinhandshake.com/profiles/52764029" class="contact-icon" target="_blank">
-                <img src="images/hand.png" alt="Handshake">
+                <img src="/images/hand.png" alt="Handshake">
             </a>
         </div>
     </section>
