--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <title>Mahilet Tesfaye - Home</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/scripts/script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> <!-- Handwritten font -->
 </head>
+
 <body>
+    
+    <section class="strengths-animation">
+        <h2>My Strengths</h2>
+        <div class="strengths">
+            <div class="strength-item">
+                <img src="/images/learner.jpg" alt="Learner Icon">
+                <p>Learner</p>
+            </div>
+            <div class="strength-item">
+                <img src="/images/strategic thinking.jpg" alt="Strategic Thinking Icon">
+                <p>Strategic Thinking</p>
+            </div>
+            <div class="strength-item">
+                <img src="/images/positivity.jpg" alt="Positivity Icon">
+                <p>Positivity</p>
+            </div>
+            <div class="strength-item">
+                <img src="/images/problem.jpg" alt="Problem Solving Icon">
+                <p>Problem Solving</p>
+            </div>
+            <div class="strength-item">
+                <img src="/images/dedication.jpg" alt="Dedication Icon">
+                <p>Dedication</p>
+            </div>
+        </div>
+    </section>
     <header>
         <nav>
             <ul class="menu">
