--- a/pages/about.html
+++ b/pages/about.html
@@ -42,5 +42,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>&copy; 2024 Mahilet Tesfaye. All rights reserved.</p>
+    </footer>
 </body>
 </html>
