--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -40,7 +40,7 @@
 
         .project-card {
             position: relative;
-            background: #ffffff;
+            background: #574001;
             border-radius: 20px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             overflow: hidden;
@@ -122,42 +122,42 @@
         <h2>My Projects</h2>
         <div class="project-container">
             <div class="project-card">
-                <img src="/images/furniture-app.jpg" alt="Furniture Online Shopping App">
+                <img src="/images/FURNITURE'.jpg" alt="Furniture Online Shopping App">
                 <div class="project-card-content">
                     <h3>Furniture Online Shopping Android App</h3>
                     <p>A mobile app that allows users to browse, search, and purchase furniture online, with user-friendly UI/UX and secure payment integration.</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="/images/hospital-db.jpg" alt="Hospital Database Management System">
+                <img src="/images/hospital.png" alt="Hospital Database Management System">
                 <div class="project-card-content">
                     <h3>Hospital Database Management System</h3>
                     <p>Implemented in Java, this system manages patient records, appointments, and billing with robust data handling and security.</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="/images/zuret-tour-guide.jpg" alt="Zuret Tour Guide Application">
+                <img src="/images/tour.jpg" alt="Zuret Tour Guide Application">
                 <div class="project-card-content">
                     <h3>Zuret Tour Guide Application</h3>
                     <p>A desktop app built using C# .Net Framework, offering guided tours, location details, and itineraries for tourists.</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="/images/fitness-tracker.jpg" alt="Fitness Tracker App">
+                <img src="/images/fit.png" alt="Fitness Tracker App">
                 <div class="project-card-content">
                     <h3>Fitness Tracker App</h3>
                     <p>Developed in Java, this app tracks workouts, monitors progress, and syncs with wearable devices for comprehensive fitness tracking.</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="/images/two-lane-traffic.jpg" alt="Two-Lane Traffic Control System">
+                <img src="/images/two.png" alt="Two-Lane Traffic Control System">
                 <div class="project-card-content">
                     <h3>Two-Lane Traffic Control System</h3>
                     <p>Implemented in C, this system manages traffic flow on a two-lane bridge using multithreading and synchronization techniques.</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="/images/public-transport-navigator.jpg" alt="Public Transport Navigator Application">
+                <img src="/images/igo.png" alt="Public Transport Navigator Application">
                 <div class="project-card-content">
                     <h3>Public Transport Navigator</h3>
                     <p>Developed using the Spring Boot framework, this application provides navigation and scheduling for public transport, featuring React front-end and Java back-end.</p>
