--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -101,7 +101,9 @@
         @media (max-width: 600px) {
          .project-card {
         flex: 1 1 100%; /* Full width on smaller screens */
+        max-width: 100%; /* Allow card to stretch to full width */
           }
+        
         }
 
 
